<resources>
    <string name="app_name">Calculadora</string>
    <string name="edit_text_num1">Ingresar numero</string>
    <string name="edit_text_num2">Ingresar numero</string>
    <string name="text_view_resultado">Resultado</string>
    <string name="button_resultado">Calcular</string>
    <string name="button_regresar">Regresar</string>
    <string name="rb_sumar">Sumar</string>
    <string name="rb_restar">Restar</string>
    <string name="rb_dividir">Dividir</string>
    <string name="rb_multiplicar">Multiplicar</string>


</resources>
