<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_Number1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="59dp"
        android:ems="10"
        android:hint="@string/edit_text_num1"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_Number2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/edit_text_num2"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_Number1" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:onClick="calcularResultado"
        android:text="@string/button_resultado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_Number2">

        <RadioButton
            android:id="@+id/rb_Sumar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_sumar" />

        <RadioButton
            android:id="@+id/rb_Restar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_restar" />

        <RadioButton
            android:id="@+id/rb_Dividir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_dividir" />

        <RadioButton
            android:id="@+id/rb_Multiplicar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_multiplicar" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>